assets/css/snowplow/_cookie.scss
/*
 * CONFIGURATION
 */

@import "../snowplow/_variables";

/*
 * DEPENDENCIES
 */



/*!
 * Snowplow v0.0.1 (https://github.com/snowplow/snowplow.github.com)
 * BLOG FILE
 */

/*
 * STYLES
 */

body.cookie main {
    margin-top: 100px;
}

#cookie {
    @include cfx;
    color: white;
    z-index: 999;
    font-size: 14px;
    padding: 20px 0;
    line-height: 1em;
    letter-spacing: 0px;
    background: $brand-primary;
    border-bottom:1px solid white;

    display:none;
    body.cookie & {
        display: block;
    }

    #cookie-bar {
        width: 100%;
        margin: 0 auto;
        display: block;
        padding:0 15px;
        text-align: right;

        @media (min-width: 768px) {
            max-width: 750px;
        }

        @media (min-width: 992px) {
            max-width: 970px;
        }

        @media (min-width: 1300px) {
            max-width: 1170px;
        }

        [class^="col-"] {
            padding:0;
            text-align:left;
        }

        @media (max-width: $screen-sm-min)
        {
            [class^="col-"] {
                padding:0;
            }
        }

        .cookie-title {
            margin: 0 0 7px 0;
            font-size: 22px;
        }

        p {
            display:none;
        }

        a {
            color: white;
            text-decoration: underline;
        }


        [class^="cb-"] {
            line-height: 0;
            font-size: 14px;
            font-weight: 400;
            min-width: 114px;
            text-align: center;
            padding: 16px 20px;
            transition: all .3s;
            display: inline-block;
            text-decoration: none;
            border:1px solid white;
            border-radius:$border-radius-base;

            /* CONTINUE BUTTON */
            &:first-of-type {
                background:white;
                color:$brand-primary;

                &:hover,
                &:focus {
                    color:white;
                    background:$brand-primary;
                }
            }

            /* KNOW MORE BUTTON */
            &:last-of-type {
                color: white;
                background:none;
                margin-top: 5px;
                border:1px solid white;

                &:hover,
                &:focus {
                    color:$brand-primary;
                    background:white;
                }
            }
        }

        @media (max-width: $screen-sm-min)
        {
            text-align: left;

            [class^="cb-"] {
                min-width: 0;
                padding: 12px;
                display: inline-block;

                /* KNOW MORE BUTTON */
                &:last-of-type {
                    margin-top: 10px;
                    margin-left: 10px;
                }
            }
        }
    }
}

